--- a/apps/reactlit-docs/src/content/docs/index.mdx
+++ b/apps/reactlit-docs/src/content/docs/index.mdx
@@ -3,15 +3,11 @@ title: Reactlit
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
-  tagline: Simple micro-app framework for React
+  tagline: A faster way to build React apps
   image:
     file: ../../assets/reactlit.svg
   actions:
     - text: Getting Started
       link: /guides/getting-started/
       icon: right-arrow
-    - text: See the examples
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
 ---
