--- a/apps/reactlit-docs/src/content/docs/guides/getting-started.mdx
+++ b/apps/reactlit-docs/src/content/docs/guides/getting-started.mdx
@@ -72,7 +72,7 @@ import helloWorldReactCode from '/src/examples/hello-world-react.tsx?raw';
 
 While similar in length, in order to read through this code you have to jump
 around. The state gets instantiated on line 4, but then set down on line 13 and used
-on lines 5 and 12. Notice how some of these are above the set and some are below.
+on lines 5 and 12. Notice how some of these are above the setName and some are below.
 There are many ways to write this logic and the code can be ordered in many ways.
 This leads to a less consitent experience when reading the code.
 
