update readme with gif, link to demo

--- a/apps/reactlit-docs/src/content/docs/index.mdx
+++ b/apps/reactlit-docs/src/content/docs/index.mdx
@@ -10,4 +10,10 @@ hero:
     - text: Getting Started
       link: /reactlit/guides/getting-started/
       icon: right-arrow
+    - text: Demo
+      link: https://stackblitz.com/edit/reactlit-demo?file=src%2FApp.tsx
+      variant: minimal
+      icon: external
+      attrs:
+        target: _blank
 ---
