remove per input wrappers in favor of core prop on the Reactlit components, finalize better plugin mechanism via useReaclit hook, update docs and all examples

--- a/apps/reactlit-docs/src/content/docs/guides/data-fetching.mdx
+++ b/apps/reactlit-docs/src/content/docs/guides/data-fetching.mdx
@@ -75,18 +75,18 @@ import ContactListDataFetchApp from '/src/examples/contact-list-data-fetch.tsx';
   lang="tsx"
   title="apps/contact-list.tsx"
   code={contactListDataFetchCode}
-  collapse={['1-24', '65-83']}
+  collapse={['1-22', '65-80']}
   mark={['contactsFetcher']}
   showLineNumbers
   ins={[
-    { range: '30-31' },
-    { range: '39-41', label: 'fetcher' },
-    { range: '42-45', label: 'show loading' },
-    { range: '46-48', label: 'get data' },
-    { range: '53-56' },
-    { range: '57-58', label: 'refetch' },
-    { range: '92-99', label: 'update' },
-    { range: '102-103', label: 'disable' },
+    { range: '24' },
+    { range: '30-32', label: 'fetcher' },
+    { range: '33-36', label: 'show loading' },
+    { range: '38-39', label: 'get data' },
+    { range: '44-50' },
+    { range: '51-52', label: 'refetch' },
+    { range: '87-98', label: 'update' },
+    { range: '102', label: 'disable' },
   ]}
 />
 
