--- a/apps/reactlit-docs/src/content/docs/index.mdx
+++ b/apps/reactlit-docs/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ template: splash
 hero:
   tagline: A faster way to build React apps
   image:
-    file: ../../assets/reactlit.svg
+    file: ../../assets/reactlit_logo.svg
   actions:
     - text: Getting Started
       link: /reactlit/guides/getting-started/
